--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2111,6 +2111,15 @@ fi
 %endif
 
 %changelog
+* Tue Oct  1 2013 Daniel Veillard <veillard@redhat.com> - 1.1.3-1
+- VMware: Initial VMware Fusion support and various improvements
+- libvirt: add new public API virConnectGetCPUModelNames
+- various libxl driver improvements
+- LXC many container driver improvement
+- ARM cpu improvements
+- 3 security bug fixes
+- a lot of bug and leak fixes and various improvements
+
 * Mon Sep  2 2013 Daniel Veillard <veillard@redhat.com> - 1.1.2-1
 - various improvements to libxl driver
 - systemd integration improvements
