--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -175,11 +175,11 @@ fi
 # Tell gnulib to:
 #   require LGPLv2+
 #   apply any local diffs in gnulib/local/ dir
-#   put *.m4 files in new gnulib/m4/ dir
+#   put *.m4 files in m4/ dir
 #   put *.[ch] files in new gnulib/lib/ dir
 #   import gnulib tests in new gnulib/tests/ dir
 gnulib_name=libgnu
-m4_base=gnulib/m4
+m4_base=m4
 source_base=gnulib/lib
 tests_base=gnulib/tests
 gnulib_tool_option_extras="\
@@ -190,11 +190,6 @@ gnulib_tool_option_extras="\
  --avoid=lock-tests\
 "
 local_gl_dir=gnulib/local
-
-# Convince bootstrap to use multiple m4 directories.
-: ${ACLOCAL=aclocal}
-ACLOCAL="$ACLOCAL -I m4"
-export ACLOCAL
 
 # Build prerequisites
 # Note that some of these programs are only required for 'make dist' to
