--- a/.gitignore
+++ b/.gitignore
@@ -210,6 +210,7 @@
 /tests/virkeycodetest
 /tests/virkeyfiletest
 /tests/virlockspacetest
+/tests/virlogtest
 /tests/virnet*test
 /tests/virportallocatortest
 /tests/virshtest
