--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -69,6 +69,7 @@ EXTRA_DIST =		\
 	fchostdata \
 	interfaceschemadata \
 	lxcxml2xmldata \
+	lxcxml2xmloutdata \
 	networkschematest \
 	networkxml2xmlin \
 	networkxml2xmlout \
