build: Add lxc testcase to dist list
Introduced by commit 3f029fb5319b9dc9cc2fbf8d1ba4505ee9e4b1e3 the RPM build
was broken due to a missing LXC textcase.

Signed-off-by: Daniel Hansel <daniel.hansel@linux.vnet.ibm.com>
(cherry picked from commit 6285c17f790a7e5027aed0207fc5d9eb9130cc0e)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -54,6 +54,7 @@ EXTRA_DIST =		\
 	domainsnapshotxml2xmlout \
 	interfaceschemadata \
 	lxcxml2xmldata \
+	lxcxml2xmloutdata \
 	networkschematest \
 	networkxml2xmlin \
 	networkxml2xmlout \
