qemu: Make migration port range configurable
https://bugzilla.redhat.com/show_bug.cgi?id=1019053
(cherry picked from commit e3ef20d7f7fee595ac4fc6094e04b7d65ee0583a)

Conflicts:
  missing support for changing migration listen address
	src/qemu/qemu.conf
	src/qemu/qemu_conf.h
	src/qemu/test_libvirtd_qemu.aug.in

--- a/src/qemu/qemu.conf
+++ b/src/qemu/qemu.conf
@@ -424,3 +424,14 @@
 # Defaults to -1.
 #
 #seccomp_sandbox = 1
+
+
+# Override the port range used for incoming migrations.
+#
+# Minimum must be greater than 0, however when QEMU is not running as root,
+# setting the minimum to be lower than 1024 will not work.
+#
+# Maximum must not be greater than 65535.
+#
+#migration_port_min = 49152
+#migration_port_max = 49215
