--- a/src/qemu/qemu.conf
+++ b/src/qemu/qemu.conf
@@ -452,3 +452,14 @@
 # Override the listen address for all incoming migrations. Defaults to
 # 0.0.0.0 or :: in case if both host and qemu are capable of IPv6.
 #migration_address = "127.0.0.1"
+
+
+# Override the port range used for incoming migrations.
+#
+# Minimum must be greater than 0, however when QEMU is not running as root,
+# setting the minimum to be lower than 1024 will not work.
+#
+# Maximum must not be greater than 65535.
+#
+#migration_port_min = 49152
+#migration_port_max = 49215
